force-app/main/default/objects/tls_warning_settings__c/tls_warning_settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>TLS Warning Settings</label>
</CustomObject>