force-app/main/default/objects/tls_warning_settings__c/fields/dateValue__c.field-meta.xml
<CustomField>
    <fullName>dateValue__c</fullName>
    <label>Date Value</label>
    <type>Date</type>
</CustomField>