force-app/main/default/objects/tls_warning_settings__c/fields/urlValue__c.field-meta.xml
<CustomField>
    <fullName>urlValue__c</fullName>
    <label>urlValue</label>
    <type>Url</type>
</CustomField>