force-app/main/default/objects/tls_warning_settings__c/fields/value__c.field-meta.xml
<CustomField>
    <fullName>value__c</fullName>
    <label>value</label>
    <length>5</length>
    <type>Text</type>
</CustomField>